secondfile/objects/SWPOUnprocessedQuote__c.object
<CustomObject>
    <fields>
        <fullName>Access_Prduct__c</fullName>
        <label>Access Prduct</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cos_Product_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cos Product Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Interface_Type__c</fullName>
        <label>Interface Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsProcessed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsProcessed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Line_Item_Count__c</fullName>
        <label>Line Item Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Line_Number__c</fullName>
        <label>Line Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Port_Product__c</fullName>
        <label>Port Product</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SiteId__c</fullName>
        <label>SiteId</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transport_Speed_Type__c</fullName>
        <label>Transport Speed Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Switched Ethernet</fullName>
                </value>
                <value>
                    <fullName>Private Line</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unilink_Product_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Unilink Product Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>parentProductId__c</fullName>
        <label>parentProductId</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>quote_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote/Proposal</label>
        <referenceTo>Apttus_Proposal__Proposal__c</referenceTo>
        <relationshipLabel>SWPOUnprocessedQuotes</relationshipLabel>
        <relationshipName>SWPOUnprocessedQuotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>SWPOUnprocessedQuote</label>
    <nameField>
        <label>SWPOUnprocessedQuote Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SWPOUnprocessedQuotes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>